Add meta and icons

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Parcel Micro App</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <link rel="icon" href="/public/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta
+      name="description"
+      content="A web-based simulation tool for advection-diffusion problems"
+    />
+    <link rel="apple-touch-icon" href="/public/logo192.png" />
+    <link rel="manifest" href="/public/manifest.webmanifest" />
+    <title>SynBIM Fluid Simulation</title>
   </head>
   <body>
     <div id="root"></div>
