--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache" />
-    <link rel="icon" href="/public/favicon.ico" />
+    <link rel="icon" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -11,8 +11,8 @@
       name="description"
       content="A web-based simulation tool for advection-diffusion problems"
     />
-    <link rel="apple-touch-icon" href="/public/logo192.png" />
-    <link rel="manifest" href="/public/manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="./public/logo192.png" />
+    <link rel="manifest" href="./public/manifest.webmanifest" />
     <title>SynBIM Fluid Simulation</title>
   </head>
   <body>
