--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
-    <link rel="icon" href="./public/favicon.ico" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <title>Lattice Boltzmann Fluid Simulator</title>
     <meta
       name="description"
-      content="A web-based simulation tool for advection-diffusion problems"
+      content="A WebGL fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems."
     />
-    <link rel="apple-touch-icon" href="./public/logo192.png" />
+
     <link rel="manifest" href="./public/manifest.webmanifest" />
-    <title>SynBIM Fluid Simulation</title>
+    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png">
+    <link rel="mask-icon" href="./public/safari-pinned-tab.svg" color="#999999">
+
+    <meta name="theme-color" content="#999999">
+    <meta name="msapplication-TileColor" content="#999999">
+    <meta name="msapplication-config" content="./public/browserconfig.xml" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </head>
   <body>
     <div id="root"></div>
