--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>Lattice Boltzmann Fluid Simulator</title>
+    <title>LBM Fluid Simulator</title>
     <meta
       name="description"
       content="A WebGL fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems."
