--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>LBM Fluid Simulator</title>
     <meta
       name="description"
-      content="A WebGL fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems."
+      content="A WebGL2 fluid simulation tool implementing the lattice Boltzmann method (LBM) for advection-diffusion problems."
     />
 
     <link rel="manifest" href="./public/manifest.webmanifest" />
